2008-01-16 Erik De Richter <frederik.de.richter@pandora.be>
    * data/man/nl: added 
    * data/man/nl/gramps.1.in: added
    * data/man/nl/Makefile.am: added
    * configure.in: changed to add above nl directory
    * data/man/Makfile.am: changed to add above nl man page

2008-01-16 Jerome Rapinat <romjerome@yahoo.fr>
        * src/images/Makefile.am: add missing reference for gramps-import.png

2008-01-16  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Makefile.am (pkgdata_PYTHON): missing backslash

2008-01-16 Martin Hawlisch <martin@hawlisch.de>
	* src/DataViews/PersonView.py,
	* src/PageView.py: Use save instead of open in the csv export file chooser

2008-01-16 Martin Hawlisch <martin@hawlisch.de>
	* src/plugins/DateParserDisplayTest.py: Use Tool.ToolOptions instead of
	None as options_class to make it no longer crash
	* src/Mime/_PythonMime.py: Avoid crash on Windows if the mime type for
	a folder is to be determined

2008-01-16 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditMediaRef.py:
	* src/DisplayTabs/_GalleryTab.py:
	Finish changes caused by Addmedia not touching database anymore, #1610

2008-01-16 Benny Malengier <benny.malengier@gramps-project.org>
	* configure.in: don't make help makefile
	* src/FilterEditor/_ShowResults.py: shorten text, bug 1609

2008-01-16 Benny Malengier <benny.malengier@gramps-project.org>
	* src/GrampsDbUtils/_GrampsDbWriteXML.py: import gzip only once

2008-01-16  Peter Landgren <peter.talken@telia.com>
    * man/Makefile.am: Swedish added (sv).
    * man/sv/gramps.1.in: Added Swedish man page (sv).
    * man/sv/Makefile.am: Added Swedish man page (sv).
    * man/fr/gramps.1.in: got the French man page back, which I overwrote yesterday

>>>>>>> .r9846
2008-01-15  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/docgen/Makefile.am: added line to copy gtkprintpreview.glade
	on distcheck.

2008-01-15  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/OnThisDay.py: date sortable